style.css
html,
body {
    font-family: 'Noto Serif', serif;
    color: #e1e1e1;
    background-color: #000;
    min-height: 100%;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.container {
    max-width: 700px;
    width: calc(100% - 40px);
    margin: 20px;
    word-wrap: break-word;
    overflow-wrap: break-word;
}

h1 {
    color: #ffffff;
}

a {
    color: #919191;
    text-decoration: underline;
}

nav ul {
    list-style: none;
    padding: 0;
}

nav ul li {
    display: inline;
    margin: 0;
}

li+li::before {
    content: '// ';
}

